# Echoelmusic

./: .clang-format  .clang-tidy  .dockerignore  .env.example  .env.template  .gitignore  .jazzy.yaml  .jazzy.yml  .mcp.json  .pre-commit-config.yaml  .sanitizers.cmake  .secrets.baseline  .swift-format  .swiftlint.yml  100_PERCENT_ACHIEVEMENT.md  100_PERCENT_READINESS_CHECKLIST.md  100_PERCENT_READINESS_REPORT.md  ACCESSIBILITY_IMPLEMENTATION_STATUS.md  ACTIONPLAN.md  ADVANCED_FEATURES_GUIDE.md  ADVANCED_NEUROSCIENCE_EVIDENCE_BASE.md  AFTER_MERGE.sh  AGENTS.md  AI_OPTIMIZATION.md  ALLES_FERTIG_WISE_MODE.md  ALL_MODULE_OPTIMIZATION_PLAN.md  ANALYSIS_SUMMARY.txt  ANDROID_BUILD_GUIDE.md  API_DOCUMENTATION.md  API_REFERENCE.md  APPSTORE_100_PERCENT_READY.md  APPSTORE_COMPLIANCE_STRATEGY.md  APPSTORE_CONNECT_AUTOMATION_GUIDE.md  APPSTORE_METADATA.md  APPSTORE_README.md  APPSTORE_SUBMISSION_CHECKLIST.md  APPSTORE_ULTRA_REVIEW.md  APP_STORE_ASSETS.md  APP_STORE_CONNECT_SETUP.md  APP_STORE_COPY.md  (+592 more)
.ai/: CLAUDE_CODE_MASTER.md  ECHOELA_INCLUSIVE_GUIDE_PROMPT.md  LOOP_MODE.md  everything-claude-code-contents.md
.auto-claude/: config.yaml  tasks.md
.claude/: PROJECT_CONTEXT.md  settings.json
.github/: CI_CD.md  CLAUDE_TODO.md  HANDOFF_TO_CODEX_WEEK1.md  TESTFLIGHT_STATUS.md  dependabot.yml  device_tokens.txt  pull_request_template.md
.vibe-kanban/: config.yaml
AppStore/: AppStoreDescription.md
Backend/: supabase_schema.sql
BlabCoreSwift/: Package.swift
CoherenceCore/: .gitignore  ARCHITECTURE_CONSOLIDATION.md  CLAUDE.md  PRD.json  README.md  jest.config.js  package-lock.json  package.json  tests.json  turbo.json
CoherenceCore/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
CoherenceCore/apps/desktop/src-tauri/src/: lib.rs  main.rs
Demo/: EchoelmusicShowcase.cpp
Docs/: API_REFERENCE.md  ARCHITECTURE_CONSOLIDATION.md  CLOUD_SAMPLE_UPLOAD_GUIDE.md  COMPETITIVE_ANALYSIS.md  DEV_DATA_MANAGEMENT.md  ECHOELMUSIC_VS_FLSTUDIO.md  FREQUENCY_LIGHT_TRANSFORMER.md  FREQUENCY_SYSTEMS_OVERVIEW.md  HYBRID_SYNTHESIS_SYSTEM.md  INTELLIGENT_STYLE_ENGINE_DE.md  IPHONE_DIRECT_ACCESS.md  MASTER_FREQUENCY_TRANSFORMER.md  MULTIPLATFORM_ROADMAP.md  PROCEDURAL_SYNTHESIS.md  PRODUCER_STYLE_PROCESSING_DE.md  PRODUCTION_CHECKLIST.md  PROJECT_STATUS_REPORT.md  SAMPLE_LIBRARY_INTEGRATION.md  SCIENTIFIC_FOUNDATION.md  SDK_INTEGRATION_GUIDE.md  SECURITY_AUDIT.md
Documentation/: CREATIVE_ENGINE_GUIDE.md  Examples.md  GettingStarted.md  UI_IMPLEMENTATION_GUIDE.md
EOEL/: Configuration.storekit  README.md
EOELWidget/: EOELWidget.swift
EchoelmusicComplete/: MASTERPLAN.md  Package.swift
EchoelmusicMVP/: ERWEITERUNGSPLAN.md  Package.swift
Examples/: CompleteIntegrationExample.md  MaxMSP_Integration.md  TouchDesigner_Integration.md
ML-Training/: README.md  requirements.txt
MySamples/: IMPORT_WORKFLOW.md  README.md
Prompts/: BLAB_MASTER_PROMPT_v4.3.md  ECHOELMUSIC_MASTER_PROMPT_v1.0.md  ECHOELMUSIC_MASTER_PROMPT_v4.3.md  EOEL_MASTER_PROMPT_v5.0.md
Resources/: Info.plist  PrivacyInfo.xcprivacy
Samples/: README.md  UPLOAD_GUIDE.md
Scripts/: ImportFromFLStudio.cpp  ProcessMySamples.cpp  QuickImport.cpp  consolidate_system.sh  deploy_everywhere.sh  import_any_folder.sh  process_bulk.sh  sample_intelligence.py  setup-git-hooks.sh  ultrathink_quality_check.sh  validate_performance.py
Sources/: JuceHeader.h
Sources/Desktop/JUCE/: CMakeLists.txt  ModernLookAndFeel.cpp  ModernLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Sources/EchoelCore/: ARCHITECTURE.md  CMakeLists.txt  EchoelCore.h
Sources/EchoelCore/Backends/: AAudioBackend.h  WebAudioBackend.h
Sources/EchoelCore/Bio/: BioMapping.h  BioState.h
Sources/EchoelCore/Bridge/: EchoelCoreBridge.h  EchoelCoreBridge.mm  INTEGRATION.md
Sources/EchoelCore/CLAP/: CLAPPlugin.h  CLAPTypes.h
Sources/EchoelCore/Lambda/: LambdaLoop.h
Sources/EchoelCore/Lock-Free/: SPSCQueue.h
Sources/EchoelCore/MCP/: MCPBioServer.h
Sources/EchoelCore/Photonic/: PhotonicInterconnect.h
Sources/EchoelCore/PluginAPI/: PluginAPI.h
Sources/EchoelCore/Tests/: EchoelCoreTests.cpp
Sources/EchoelCore/WebXR/: WebXRAudioBridge.h
Tests/: AdvancedTestingFramework.h  ComprehensiveTestSuite.cpp  EchoelCollabStreamTests.cpp  EchoelContentTests.cpp  EchoelDSPTests.cpp  EchoelVideoAIOptTests.cpp  FrequencyLightTransformerTests.cpp  INTEGRATION_TESTING.md  MasterFrequencyTransformerTests.cpp  MinimalBuildTest.cpp  PERFORMANCE_TESTING.md  PerformanceTests.cpp  SuperLaserScanTests.cpp  TEST_IMPROVEMENTS.md  TEST_VALIDATION_REPORT.md  UniversalCreativeIntelligenceTests.cpp
Tests/DSPTests/: BioReactiveDSPTests.cpp  CMakeLists.txt  CompressorEQTests.cpp  README.md  SIMDBenchmarks.cpp  catch.hpp
Tuist/: Config.swift
android/: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android-app/: ANDROID_ARCHITECTURE.md
android/app/src/main/cpp/: CMakeLists.txt  EchoelmusicEngine.cpp  EchoelmusicEngine.h  SIMDHelper.h  Synth.cpp  Synth.h  TR808Engine.cpp  TR808Engine.h  jni_bridge.cpp  quantum_jni.cpp
audit-results/: ECHOELMUSIC-TECHNICAL-AUDIT-REPORT.md  github-issues.json
automation/: README.md  deploy.sh
backend/: .dockerignore  .env.example  .env.minimal  Dockerfile  docker-compose.minimal.yml  docker-compose.yml  package.json  railway.json  requirements.txt
blab-core/: Cargo.toml  README.md  build-ios.sh
blab-core/crates/audio/: Cargo.toml
blab-core/crates/audio/src/: buffer.rs  engine.rs  lib.rs  midi.rs  processor.rs
blab-core/crates/ffi/: Cargo.toml  build.rs  cbindgen.toml
blab-core/crates/ffi/src/: lib.rs
blab-core/crates/visual/: Cargo.toml
blab-core/crates/visual/src/: lib.rs  particles.rs  renderer.rs  shaders.rs
blab-core/crates/visual/src/shaders/: audio_spectrum.wgsl  cymatics.wgsl  flow_field.wgsl  fractals.wgsl  particle_render.wgsl  particles.wgsl
clap/: CMakeLists.txt  echoelmusic_clap_plugin.cpp  echoelmusic_clap_plugin.h
contracts/: Dockerfile  (+3 more)
juce/: CMakeLists.txt
juce/Source/: EchoelmusicAudioEngine.cpp  EchoelmusicAudioEngine.h
(+4096 files in other folders)
